# sdl2-basic-window

./: CMakeLists.txt  LICENSE  README.md  main.c
cmake_modules/: FindSDL2.cmake
